--- a/new/works.css
+++ b/new/works.css
@@ -48,6 +48,7 @@
   grid-template-columns: auto auto auto auto auto;
   align-items: baseline;
   justify-content: start;
+  margin-bottom: 4%;
 }
 
 .category-text {
